--- a/Suma2Lealtad/Views/Afiliado/Create.cshtml
+++ b/Suma2Lealtad/Views/Afiliado/Create.cshtml
@@ -38,6 +38,7 @@
                             @Html.HiddenFor(model => model.id)
                             @Html.HiddenFor(model => model.clientid)
                             @Html.HiddenFor(model => model.typeid)
+                            @Html.HiddenFor(model => model.reasonsid)
 
                             <div class="editor-label col-md-4 control-label">
                                 * Número Documento/Cédula :
